# new_admin_panel_sprint_3

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  setup_es_data.sh
data/: .env.demo
docker/: Dockerfile
etl/: main.py  pyproject.toml
etl/db/: driver.py
etl/extract/: film.py  film_load_from_db.py  film_load_from_db_by_genre.py  genre.py  person.py
etl/extract/sql/: film_sql.py  genre_sql.py  person_sql.py
etl/load/: base_loader.py  film_loader.py  movies_index.py
etl/log/: logger.py
etl/model/: models.py
etl/pull_from_postgres/: base.py
etl/pull_from_postgres/films/: film_from_db.py  film_from_db_by_genre.py  film_from_db_by_person.py
etl/pull_from_postgres/genres/: genre_from_db.py
etl/pull_from_postgres/persons/: person_from_db.py
etl/pull_from_postgres/sql/: film_sql.py  genre_sql.py  person_sql.py
etl/push_to_elastic/: base_loader.py  film_loader_to_elastic.py  genre_loader_to_elastic.py  person_loader_to_elastic.py
etl/push_to_elastic/elastic_settings/: genres.py  movies.py  persons.py
etl/transform/: models.py
etl/utils/: backoff.py  waiting.py
